--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,14 +69,14 @@ jobs:
 #    - name: Create .nojekyll
 #      run: touch docs/.nojekyll
       
-    - name: Create CNAME
-      run: echo "alixcan.net" > docs/CNAME
+#    - name: Create CNAME
+#      run: echo "alixcan.net" > docs/CNAME
 
-    - name: Copy favicon to site root
-      run: cp docs/media/favicon.ico docs/favicon.ico
+#    - name: Copy favicon to site root
+#      run: cp docs/media/favicon.ico docs/favicon.ico
 
-    - name: Create docs redirect
-      run: echo '<meta http-equiv="refresh" content="0;url=/docs/1.x" />' > docs/docs/index.html
+#    - name: Create docs redirect
+#      run: echo '<meta http-equiv="refresh" content="0;url=/docs/1.x" />' > docs/docs/index.html
 
     - name: Commit changes
       uses: EndBug/add-and-commit@v9 
